--- a/src/components/popup.css
+++ b/src/components/popup.css
@@ -5,7 +5,7 @@
   transform: translate(-50%, -50%);
   background-color: #FFF;
   width: 30%;
-  height: 60%;
+  height: 70%;
   padding: 50px;
   z-index: 1000;
 }
@@ -47,4 +47,9 @@
 
 .submit-button {
   margin-top: 2rem; 
+}
+
+textarea {
+  width: 100%;
+  height: 120px
 }
